--- a/update.ini
+++ b/update.ini
@@ -1,3 +1,30 @@
 [config]
 script_version=1
 script_version_text=1.1
+window=false
+onewindow=false
+twowindow=false
+threewindow=false
+server=0
+many_drug=1
+sbiv_drug=1
+acctive_drug=true
+acctive_armour=true
+acctive_mask=true
+RP_drug=true
+allow_bunnyhop=true
+acctive_phone=true
+acctive_lock=true
+acctive_style=true
+auto_bike=true
+auto_time=true
+beg=true
+say_kill=соси лопату
+acctive_kill=true
+command_heal=/healme
+acctive_heal=true
+acctive_scroll=true
+number_scroll=2
+scroll=1
+fast_run=true
+anti_stan=true
